apply plugin: 'com.android.library'

android {
    namespace 'net.mabako.steamgifts.core'

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    defaultConfig {
        minSdkVersion 24
        compileSdk rootProject.ext.compileSdkVersion
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 28
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lint {
        disable 'ExpiredTargetSdkVersion'
        warning 'InvalidPackage' // okio references java.nio, which is not part of android.
    }
}

dependencies {
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'androidx.browser:browser:1.8.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.exifinterface:exifinterface:1.3.7'
    implementation 'androidx.gridlayout:gridlayout:1.0.0'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.recyclerview:recyclerview:1.3.2'

    implementation 'com.google.android.material:material:1.11.0'
    implementation 'com.google.code.gson:gson:2.10.1'

    implementation 'com.squareup.picasso:picasso:2.8'
    implementation 'com.squareup.okio:okio:3.9.0'
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    implementation 'com.mikepenz:actionitembadge:3.3.1@aar'
    implementation 'com.mikepenz:iconics-core:3.2.5'
    implementation 'com.mikepenz:iconics-views:3.2.5'
    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
    implementation 'com.mikepenz:materialdrawer:6.1.2'
    // Force version to fix error spam for MaterialDrawer 6.1.2, remove after upgrading to >= 7.0.0
    implementation 'com.mikepenz:fastadapter:3.3.1'

    implementation 'com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0'
    implementation 'com.github.AppIntro:AppIntro:6.2.0'
    implementation 'org.jsoup:jsoup:1.18.1'
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.29'

    implementation('com.wefika:flowlayout:0.4.1') {
        exclude group: 'com.intellij', module: 'annotations'
    }
}
